--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "three": "^0.178.0",
     "uuid": "^9.0.1",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/three": "^0.178.1",
     "typescript": "^4.9.5"
   }
 }
