--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.49",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.11.0",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
