--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alisveris-uygulamasi",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Dotzy2482.github.io/alisveris-uygulamasi",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -33,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
